--- a/style.css
+++ b/style.css
@@ -140,9 +140,10 @@ ul.features-list li:before {
 }
 #SEP-text{
   color: white;
-  font-size: 1em;
+  font-size: 1.2em;
 }
 #SEP-h1{
+  font-size: 2em;
   color: var(--primary-color);
 }
 #ux{
@@ -179,13 +180,13 @@ ul.features-list li:before {
   margin-top: -7em;
 }
 .testimonials-section ul li a{
-  color:aliceblue;
+  color:#20272E;
+  
   font-weight: bold;
 }
 .testimonials-section ul li p{
-  color:#20272E;
+  color:aliceblue;
   font-weight: bold;
-  
 }
 h2 {
   font-size: 2em;
@@ -253,6 +254,10 @@ nav li a {
   font-size: 2em;
 }
 
+#coduxMail{
+  color: aqua;
+}
+
 @media only screen and (min-width: 768px) {
   .mobile-menu, .mobile-menu-exit {
     display: none;
@@ -296,9 +301,6 @@ nav li a {
   .navbar nav ul.primary.nav {
     margin: 0;
   }
-
-
-
 
 }
 
@@ -355,13 +357,7 @@ nav li a {
   .features-section-SEP {
     position: relative;
   }
-  #SEP-text{
-    margin-left: -6em;
-  }
-  #SEP-h1{
-    margin-top: -5em;
-    margin-left: -4em;
-  }
+
   .testimonials-section ul {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -375,6 +371,10 @@ nav li a {
     margin-top: -4em;
     margin-left: 4em;
     font-size: 2em;
+  }
+  #textContainer{
+    margin-top: -7em;
+    margin-left: -16em;
   }
 
 }
@@ -425,7 +425,7 @@ nav li a {
     height: 20em;
     background: var(--primary-color);
     right: 0;
-    top: 80em;
+    top: 70em;
   }
   .hero:before {
     content: '';
